name:                shoebox
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
-- license-file:        LICENSE
author:              Frankfurt HUG
-- maintainer:
-- copyright:
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Shoebox
  build-depends:       base >=4.8 && <4.9,
                       text,
                       containers
  hs-source-dirs:      src
  default-language:    Haskell2010

executable shoebox
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9,
                       shoebox
  hs-source-dirs:      main
  default-language:    Haskell2010

test-suite specs
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base,
                       shoebox,
                       hspec,
                       QuickCheck
  default-language:    Haskell2010
